# rl_test

./: Port.py
zhongyao/Point-LIO/config/: avia.yaml  mid360.yaml
zhongyao/ch1/: CMakeLists.txt  CMakeLists_old.txt  package.xml
zhongyao/ch1/PCD/: stair.pcd  stairs.ply  stairs_pass.pcd
zhongyao/ch1/launch/: tri.launch
zhongyao/ch1/msg/: person.msg
zhongyao/ch1/scripts/: dem_sub.py  demo_pub.py  dynamic_pub.py  dynamic_sub.py  follow_client.py  follow_pub.py  msg_pub.py  msg_sub.py  srv_clt.py  srv_srv.py
zhongyao/ch1/src/: 2d_plane_model.cpp  pcd2pgm.cpp  pointcloud2.cpp  read_pcd.cpp  read_plane.cpp  read_plane_old.cpp  recognize.cpp  reg.cpp  reg_error.cpp  tri_model.cpp
zhongyao/chuanlianma_test3/: CMakeLists.txt  package.xml
zhongyao/chuanlianma_test3/config/: control.yaml
zhongyao/chuanlianma_test3/launch/: control.launch  display.launch  gazebo.launch
zhongyao/chuanlianma_test3/meshes/: base_link.STL  link1.STL  link2.STL  link3.STL
zhongyao/chuanlianma_test3/urdf/: chuanlianma_test3.csv  chuanlianma_test3.urdf.xacro
zhongyao/chuanlianma_test3/world/: horse_gnd.world
zhongyao/control/: CMakeLists.txt  package.xml
zhongyao/control/scripts/: control.py
zhongyao/g308_issacgym/: real_windows.py
zhongyao/g308_issacgym/g308_isaacgym/: config.yaml  g308_modelt.pt  him0205_01_km_no_hip.pt  him0205_02_km_hip.pt  him0205_03_km_hip.pt  him_crawl_km3_0324_01(10good).pt  him_jump_km3_0327_01(laji).pt  him_km2_0212_01.pt  him_km2_0212_02.pt  him_km2_0212_03.pt  him_km2_0212_04.pt  him_km2_0213_01.pt  him_km2_0213_02.pt  him_km2_0213_03.pt  him_km2_0214_01(yiban).pt  him_km2_0214_02.pt  him_km2_0214_03.pt  him_km2_0214_04.pt  him_km2_0214_05.pt  him_km2_0216_01.pt  him_km2_0217_01.pt  him_km2_0217_02.pt  him_km2_0219_01.pt  him_km2_0220_01.pt  him_km2_0221_01(good).pt  him_km2_0221_02.pt  him_km2_0224_01(0.6).pt  him_km2_tri_0216_02.pt  him_km2_trot_0216_01.pt  him_km3_0313_01(shangpo yiban xiangyou yiban).pt  him_km3_0313_02(yiban).pt  him_km3_0313_03(zhixing laji).pt  him_km3_0313_withplane.pt  him_km3_0315_01(douyiban).pt  him_km3_0315_02(5good).pt  him_km3_0316_01(5yiban).pt  him_km3_0324_01(10good).pt  him_km3_plane_0316_01.pt  him_km3_plane_0318_01.pt  him_km3_plane_0319_01(wai).pt  (+22 more)
zhongyao/g308_test1/: CMakeLists.txt  package.xml
zhongyao/g308_test2/: package.xml
zhongyao/g308_test3/: CMakeLists.txt  package.xml
zhongyao/horse/: CMakeLists.txt  package.xml
zhongyao/horse2/: CMakeLists.txt  package.xml
zhongyao/nav/: CMakeLists.txt  package.xml
zhongyao/pcl1/: CMakeLists.txt  package.xml
zhongyao/pcl1/src/: 1read_plane.cpp  2d_plane_model.cpp  obstacle_detect.cpp  read_pcd1.cpp
zhongyao/pointcloud_to_laserscan/: CMakeLists.txt
zhongyao/sim/: CMakeLists.txt  package.xml
zhongyao/world/: basketball_ground.dae  basketball_ground2.dae  horse_gnd.world  horse_nowall.dae  stair.dae  stair.world  world.dae  world_full.dae
(+241 files in other folders)
